# Thing-Sandbox

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  README.md  config.toml  config.toml_backup_B5a  pyproject.toml  requirements-dev.txt  requirements.txt  stats.py
docs/: OpenRouter Create a response.md  Thing' Sandbox Architecture.md  Thing' Sandbox BACKLOG-005 Workplan.md  Thing' Sandbox Backlog.md  Thing' Sandbox Concept.md  Thing' Sandbox Data Flow.md  Thing' Sandbox LLM Approach v2.md  Thing' Sandbox LLM Prompting.md  Thing' Sandbox LLM Usage Tracking.md  Thing' Sandbox OpenAI Responses API Reference.md  Thing' Sandbox OpenAI Structured model outputs API Reference.md  Thing' Sandbox OpenRouter Responses API Reference.md  Thing' Sandbox Sim Guide.md  Thing' Sandbox Specs Writing Guide.md  Thing' Sandbox Telegram API Reference.md  Thing' Sandbox Workplan.md  Поиск ответов на вопросы.md
docs/specs/: core_cli.md  core_config.md  core_narrators.md  core_runner.md  core_tick_logger.md  phase_1.md  phase_2a.md  phase_2b.md  phase_3.md  phase_4.md  phase_common.md  util_exit_codes.md  util_llm.md  util_llm_adapter_base.md  util_llm_adapter_openai.md  util_llm_errors.md  util_logging_config.md  util_prompts.md  util_storage.md  util_telegram_client.md
docs/tasks/: TS-A.1-INIT-001_REPORT.md  TS-A.2-EXIT-001_REPORT.md  TS-A.4-STORAGE-001.md  TS-A.4-STORAGE-001_REPORT.md  TS-A.5a-CONFIG-001.md  TS-A.5a-CONFIG-001_REPORT.md  TS-A.5b-ADAPTER-001.md  TS-A.5b-ADAPTER-001_REPORT.md  (+72 more)
src/: cli.py  config.py  narrators.py  runner.py  tick_logger.py
tests/: conftest.py
(+81 files in other folders)
